--- a/club-manager/src/app/app.component.scss
+++ b/club-manager/src/app/app.component.scss
@@ -1,6 +1,17 @@
 
+.minMenu {
+  text-align-last: left;
+  margin: 0px;
+  padding: 0px;
+  border: 0px;
+  width: 45px;
+}
 
-mat-sidenav {
+.maxMenu {
+  text-align-last: left;
+  margin: 0px;
+  padding: 0px;
+  border: 0px;
   width: 130px;
 }
 
@@ -14,7 +25,6 @@ mat-sidenav {
   font-family: Roboto, "Helvetica Neue", sans-serif;
   font-size: 14px;
   font-weight: 500;
-  line-height: 36px;
 }
 
 .right {
