Erste Mitglieder Table

--- a/club-manager/src/app/app.component.scss
+++ b/club-manager/src/app/app.component.scss
@@ -42,7 +42,7 @@
 */
 //Arbeitsbereich nur zum Test
 .workspace {
-  margin-left: 20px;
+  // margin-left: 20px;
   // color: var(--primary);
   min-height: 700px;
 }
