--- a/club-manager/src/app/members/member-list/member-list.component.scss
+++ b/club-manager/src/app/members/member-list/member-list.component.scss
@@ -14,3 +14,44 @@
   position: absolute;
   right: 0px;
 }
+
+// Progressbar
+.spinner-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+}
+
+.spinner-text {
+  position: absolute;
+  text-align: center;
+  top: 35%;
+  left: 44%;
+}
+
+.search {
+  margin-top: 11px;
+  margin-left: 100px;
+  font-size: 12pt;
+}
+
+.search-icon {
+  margin-left: 50px;
+  font-size: 12pt;
+}
+
+.search-input {
+  margin-left: 5px;
+  font-size:8pt;
+  // background-color: white;
+}
+
+.mat-header-row {
+  min-height: 35px;
+  height: 35px;
+  font-weight: 600;
+}
+
