--- a/club-manager/src/app/members/member-list/member-list.component.html
+++ b/club-manager/src/app/members/member-list/member-list.component.html
@@ -1,6 +1,6 @@
-<mat-toolbar color="accent">
+<mat-toolbar class="toolbar-sub" color="accent">
   <span>Mitglieder</span>
-
+  <mat-icon class="search-icon1">person_add_alt_1</mat-icon>
   <div class="search">
     <mat-icon class="search-icon">search</mat-icon>Filter:
     <mat-form-field class="search-input">
@@ -8,7 +8,7 @@
   </mat-form-field>
   </div>
 
-  <div class="right">
+  <div class="toolbar-right">
     <button mat-button routerLink="settings">
       <mat-icon>more_horiz</mat-icon>
     </button>
@@ -21,39 +21,19 @@
   <mat-spinner value="100" mode="determinate" diameter="40"></mat-spinner>
 </div>
 
-<mat-table class="member-table" [dataSource]="members$" matSort (matSortChange)="sortData($event)">
+<div class="member-table" mat-elevation-z8>
+<table mat-table [dataSource]="members$" matSort (matSortChange)="sortData($event)">
 
-  <ng-container matColumnDef="familyname">
-      <mat-header-cell mat-sort-header *matHeaderCellDef>Nachname</mat-header-cell>
-      <mat-cell class="description-cell" *matCellDef="let member">{{member.Familyname}}</mat-cell>
+  <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns">
+    <th class="cell-width" mat-header-cell mat-sort-header *matHeaderCellDef>{{displayedColumnNames[column]}}</th>
+    <td mat-cell *matCellDef="let member">{{member[column]}}</td>
   </ng-container>
 
-  <ng-container matColumnDef="firstname">
-      <mat-header-cell mat-sort-header *matHeaderCellDef>Vorname</mat-header-cell>
-      <mat-cell class="duration-cell" *matCellDef="let member">{{member.Firstname}}</mat-cell>
-  </ng-container>
+  <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky:true" class="header-row"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
 
-  <ng-container matColumnDef="street">
-    <mat-header-cell mat-sort-header *matHeaderCellDef>Straße</mat-header-cell>
-    <mat-cell class="duration-cell" *matCellDef="let member">{{member.Street}}</mat-cell>
-  </ng-container>
-
-  <ng-container matColumnDef="zip">
-    <mat-header-cell mat-sort-header *matHeaderCellDef>PLZ</mat-header-cell>
-    <mat-cell *matCellDef="let member">{{member.Zipcode}}</mat-cell>
-</ng-container>
-
-  <ng-container matColumnDef="city">
-    <mat-header-cell mat-sort-header *matHeaderCellDef>Ort</mat-header-cell>
-    <mat-cell class="duration-cell" *matCellDef="let member">{{member.City}}</mat-cell>
-  </ng-container>
-
-  <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-  <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
-
-
-</mat-table>
-
-<mat-paginator [length]="memberCount" [pageSize]="50" [pageSizeOptions]="[5, 10, 25, 100]">
+</table>
+</div>
+<mat-paginator [length]="memberCount" [pageSize]="50" [pageSizeOptions]="[5, 10, 25, 50, 100]">
 </mat-paginator>
 
