--- a/club-manager/src/app/members/member-list/member-list.component.scss
+++ b/club-manager/src/app/members/member-list/member-list.component.scss
@@ -63,3 +63,9 @@
 .cell-width {
   width: 310px;
 }
+
+/* Animate items as they're being sorted. */
+.cdk-drop-list-dragging .cdk-drag {
+  transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
+  // color: var(--primary);
+}
