--- a/club-manager/src/app/members/member-list/member-list.component.html
+++ b/club-manager/src/app/members/member-list/member-list.component.html
@@ -21,19 +21,28 @@
   <mat-spinner value="100" mode="determinate" diameter="40"></mat-spinner>
 </div>
 
-<div class="member-table" mat-elevation-z8>
-<table mat-table [dataSource]="members$" matSort (matSortChange)="sortData($event)">
+<!-- Workspace -->
+<div style="background: yellow;" class="member-table">
+  <as-split direction="horizontal">
+    <as-split-area [size]="75">
 
-  <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns">
-    <th class="cell-width" mat-header-cell mat-sort-header *matHeaderCellDef>{{displayedColumnNames[column]}}</th>
-    <td mat-cell *matCellDef="let member">{{member[column]}}</td>
-  </ng-container>
+      <table mat-table [dataSource]="members$" matSort (matSortChange)="sortData($event)">
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky:true" class="header-row"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+        <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns">
+          <th class="cell-width" mat-header-cell mat-sort-header *matHeaderCellDef>{{displayedColumnNames[column]}}</th>
+          <td mat-cell *matCellDef="let member">{{member[column]}}</td>
+        </ng-container>
 
-</table>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky:true" class="header-row"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+      </table>
+      <mat-paginator [length]="memberCount" [pageSize]="50" [pageSizeOptions]="[5, 10, 25, 50, 100]">
+      </mat-paginator>
+    </as-split-area>
+    <as-split-area [size]="25">
+      RIGHT
+    </as-split-area>
+  </as-split>
 </div>
-<mat-paginator [length]="memberCount" [pageSize]="50" [pageSizeOptions]="[5, 10, 25, 50, 100]">
-</mat-paginator>
 
