--- a/club-manager/src/app/members/member-list/member-list.component.html
+++ b/club-manager/src/app/members/member-list/member-list.component.html
@@ -15,30 +15,12 @@
   </div>
 </mat-toolbar>
 
-
-<div class="spinner-text" *ngIf="loading async">Daten werden geladen</div>
-<div class="spinner-container" *ngIf="loading async">
-  <mat-spinner value="100" mode="determinate" diameter="40"></mat-spinner>
-</div>
-
 <!-- Workspace -->
 <div style="background: yellow;" class="member-table">
   <as-split direction="horizontal">
     <as-split-area [size]="75">
-
-      <table mat-table [dataSource]="members$" matSort (matSortChange)="sortData($event)">
-
-        <ng-container [matColumnDef]="column" *ngFor="let column of displayedColumns">
-          <th class="cell-width" mat-header-cell mat-sort-header *matHeaderCellDef>{{displayedColumnNames[column]}}</th>
-          <td mat-cell *matCellDef="let member">{{member[column]}}</td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky:true" class="header-row"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-
-      </table>
-      <mat-paginator [length]="memberCount" [pageSize]="50" [pageSizeOptions]="[5, 10, 25, 50, 100]">
-      </mat-paginator>
+      <cl-member-table  [filter]="search" >
+      </cl-member-table>
     </as-split-area>
     <as-split-area [size]="25">
       RIGHT
