Nach Umstellung Sorting, Paging - OK

--- a/club-manager/src/app/members/member-table/member-table.component.html
+++ b/club-manager/src/app/members/member-table/member-table.component.html
@@ -9,7 +9,7 @@
   <tr mat-row *matRowDef="let row; columns: displayedColumnNames" class="table-row"></tr>
 
 </table>
-<mat-paginator [length]="memberCount" [pageSize]="50" [pageSizeOptions]="[5, 10, 25, 50, 100]">
+<mat-paginator [length]="pageTotalCount" [pageSize]="pageCount" [pageSizeOptions]="[5, 10, 25, 50, 100]">
 </mat-paginator>
 
 <div class="spinner-text" *ngIf="loading async">Daten werden geladen</div>
