--- a/club-manager/src/app/members/member-list/member-list.component.html
+++ b/club-manager/src/app/members/member-list/member-list.component.html
@@ -16,15 +16,13 @@
 </mat-toolbar>
 
 <!-- Workspace -->
-<div style="background: yellow;" class="member-table">
-  <as-split direction="horizontal">
-    <as-split-area [size]="75">
-      <cl-member-table  [filter]="search" >
-      </cl-member-table>
-    </as-split-area>
-    <as-split-area [size]="25">
-      RIGHT
-    </as-split-area>
-  </as-split>
-</div>
+<as-split direction="horizontal" class="split-base">
+  <as-split-area [size]="75" class="table-base">
+    <cl-member-table  [filter]="search" >
+    </cl-member-table>
+  </as-split-area>
+  <as-split-area [size]="25">
+    RIGHT
+  </as-split-area>
+</as-split>
 
