--- a/club-manager/src/app/members/member-table/member-table.component.html
+++ b/club-manager/src/app/members/member-table/member-table.component.html
@@ -1,7 +1,11 @@
-<table  mat-table class="table" [dataSource]="members$" matSort (matSortChange)="sortData($event)">
+<table  mat-table class="table" [dataSource]="members$" matSort (matSortChange)="sortData($event)"
+  cdkDropList cdkDropListLockAxis="x" cdkDropListOrientation="horizontal" (cdkDropListDropped)="dropListDropped($event)">
 
   <ng-container [matColumnDef]="column.field" *ngFor="let column of displayedColumns" >
-    <th class="cell-width" mat-header-cell mat-sort-header *matHeaderCellDef>{{column.name}}</th>
+    <th class="cell" mat-header-cell mat-sort-header *matHeaderCellDef
+        cdkDrag (cdkDragStarted)="dragStarted($event)" [cdkDragData]="{name: column.field}">
+        {{column.name}}
+    </th>
     <td mat-cell *matCellDef="let member">{{member[column.field]}}</td>
   </ng-container>
 
