--- a/club-manager/src/app/members/member-table/member-table.component.scss
+++ b/club-manager/src/app/members/member-table/member-table.component.scss
@@ -14,7 +14,7 @@
   height: 40px;
 }
 
-.cell-width {
+.cell {
   width: 310px;
 }
 
@@ -22,6 +22,13 @@
 .cdk-drop-list-dragging .cdk-drag {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
   // color: var(--primary);
+}
+
+.cdk-drag-preview  {
+  color: var(--primary);
+  display: flex;
+  border: white;
+
 }
 
 // Progressbar
