--- a/club-manager/src/app/groups/group-list/group-list.component.html
+++ b/club-manager/src/app/groups/group-list/group-list.component.html
@@ -1,1 +1,15 @@
 <h2>Gruppenliste</h2>
+<!-- Workspace -->
+<div>
+<as-split direction="horizontal" [unit]="'pixel'" class="split-base">
+  <as-split-area [size]="750">
+    LEFT
+  <!--   <cl-member-table  [filter]="search" >
+    </cl-member-table> -->
+  </as-split-area>
+  <as-split-area [size]="250">
+    RIGHT
+   <!-- <router-outlet name="sidebar"></router-outlet> -->
+  </as-split-area>
+</as-split>
+</div>
