--- a/club-manager/src/app/members/member-table/member-table.component.scss
+++ b/club-manager/src/app/members/member-table/member-table.component.scss
@@ -1,5 +1,6 @@
 .table-container {
   max-width: 100%;
+  height: auto;
 }
 
 .header-row {
@@ -43,9 +44,12 @@
   left: 44%;
 }
 
+
 // Spaltenbreiten
 .mat-column-Familyname {
-  width : 320px;
+  padding-left: 20px;
+  padding-right: 20px;
+  //width : 320px;
 }
 .mat-column-Firstname {
   width : 320px;
@@ -54,8 +58,11 @@
   width : 320px;
 }
 .mat-column-Zipcode {
-  width : 100px;
+  padding-left: 20px;
+  padding-right: 20px;
+  //width : 100px;
 }
 .mat-column-City {
   width : 300px;
 }
+
