Spiltscreen geht mit Tabelle

--- a/club-manager/src/app/app.component.html
+++ b/club-manager/src/app/app.component.html
@@ -71,5 +71,5 @@
   </button>
   </mat-sidenav>
 
-  <mat-sidenav-content><div class="workspace"><router-outlet></router-outlet></div></mat-sidenav-content>
+  <mat-sidenav-content class="workspace"><router-outlet></router-outlet></mat-sidenav-content>
 </mat-sidenav-container>
