--- a/club-manager/src/app/members/member-list/member-list.component.html
+++ b/club-manager/src/app/members/member-list/member-list.component.html
@@ -24,12 +24,12 @@
 
 <!-- Workspace -->
 <as-split direction="horizontal" class="split-base">
-  <as-split-area [size]="75" class="table-base">
-    <cl-member-table  [filter]="search" >
+  <as-split-area  class="table-base">
+   <cl-member-table  [filter]="search" >
     </cl-member-table>
-  </as-split-area>
-  <as-split-area [size]="25">
-    <router-outlet name="sidebar"></router-outlet>
+  </as-split-area >
+  <as-split-area [size]="25" class="table-base">
+    RECHTS <!-- <router-outlet name="sidebar"></router-outlet> -->
   </as-split-area>
 </as-split>
 
