--- a/club-manager/src/app/members/member-table/member-table.component.scss
+++ b/club-manager/src/app/members/member-table/member-table.component.scss
@@ -17,6 +17,10 @@
   height: 40px;
 }
 
+.pag-base {
+  position: fixed;
+}
+
 /* Animate items as they're being sorted. */
 .cdk-drop-list-dragging .cdk-drag {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
