--- a/club-manager/src/app/dashboard/dashboard/dashboard.component.html
+++ b/club-manager/src/app/dashboard/dashboard/dashboard.component.html
@@ -1,2 +1,5 @@
-<h2>Übersicht</h2>
-
+<h1>Club Manager</h1>
+<h3>Letzte Benutzung</h3>
+<h3>Anzahl Mitglieder</h3>
+<h3>Anzahl Gruppen</h3>
+<h4>und mehr ...</h4>
