--- a/club-manager/src/app/app.component.scss
+++ b/club-manager/src/app/app.component.scss
@@ -5,6 +5,7 @@
   position: fixed;
   top: 0%;
   width: 100%;
+  height: 60px;
   z-index: 100;
 }
 
@@ -54,10 +55,44 @@
   color: var(--primary);
 }
 
+.deaktive {
+  color: black;
+}
+
+.header {
+  position: fixed;
+  margin-top: 60px;
+  height: 50px;
+  width: 100%;
+  min-height: 50px !important;
+  //background-color: rgb(148, 43, 52);
+}
+
 //Arbeitsbereich
+.split-base {
+  margin-top: 105px;
+  height:  $base-workspace;
+}
+
 .workspace {
-  margin-top: 70px;
+  width:50;
+  background-color: rgb(187, 184, 36);
   height: $base-workspace;
 }
 
+.workspace_sec {
+  width:50;
+  background-color: rgb(0, 255, 34);
+  height: $base-workspace;
+}
+
+.footer{
+  position: fixed;
+  bottom: 0px !important;
+  height: 30px;
+  width: 100%;
+  min-height: 30px !important;
+  background-color: var(--accent);
+  z-index: 100;
+}
 
