--- a/club-manager/src/app/members/member-columns/member-columns.component.scss
+++ b/club-manager/src/app/members/member-columns/member-columns.component.scss
@@ -1,4 +1,4 @@
-.col-base {
-  margin-top: 200px;
-  background-color: blue;
+.sidebar-base {
+  margin-top:50px;
+  background-color: rgb(25, 0, 255);
 }
