--- a/club-manager/src/app/members/member-details/member-details.component.html
+++ b/club-manager/src/app/members/member-details/member-details.component.html
@@ -33,13 +33,12 @@
       Mitglied löschen
     </ng-container>
   </button>
-  <a class="ui tiny yellow labeled icon button"
-    [routerLink]="['../../admin/edit', member.Id]">
+  <a class="ui tiny yellow labeled icon button"></a>
+   <!---[routerLink]="['../../admin/edit', member.Id]"> -->
     <i class="write icon"></i>
     <ng-container>
       Mitglied bearbeiten
     </ng-container>
-  </a>
 </div>
 
 <ng-template #loading>
