--- a/club-manager/src/app/members/member-header/member-header.component.html
+++ b/club-manager/src/app/members/member-header/member-header.component.html
@@ -19,5 +19,6 @@
 <mat-menu #menu="matMenu">
   <button mat-menu-item (click)="secondaryNav('mem-columns')">Spalten ändern...</button>
   <button mat-menu-item (click)="secondaryNav('mem-groups')">Gruppen zuweisen...</button>
+  <button mat-menu-item (click)="secondaryNav('close')">Sidebar schließen</button>
 </mat-menu>
 
