--- a/club-manager/src/app/works/work-header/work-header.component.html
+++ b/club-manager/src/app/works/work-header/work-header.component.html
@@ -10,8 +10,7 @@
 </mat-toolbar>
 
 <mat-menu #menu="matMenu">
-  <!--
-  <button mat-menu-item (click)="secondaryNav('mem-columns')">Spalten ändern...</button>
-  <button mat-menu-item (click)="secondaryNav('mem-groups')">Gruppen zuweisen...</button>
-  -->
+  <button mat-menu-item (click)="secondaryNav('work-member')">Mitglieder...</button>
+  <button mat-menu-item (click)="secondaryNav('work-event')">Veranstaltungen...</button>
+  <button mat-menu-item (click)="secondaryNav('close')">Sidebar schließen</button>
 </mat-menu>
