--- a/club-manager/src/app/members/member-columns/member-columns.component.html
+++ b/club-manager/src/app/members/member-columns/member-columns.component.html
@@ -1,1 +1,9 @@
 <p class="sidebar-base">Spalten auswählen</p>
+<!-- <form [formGroup]="techForm" (ngSubmit)="onFormSubmit()"> -->
+  <mat-selection-list formControlName="selectedColumn">
+    <mat-list-option *ngFor="let col of fieldList" [value]="col">
+      {{col.Label}}
+    </mat-list-option>
+  </mat-selection-list>
+  <button mat-raised-button color="warn" class="apply-button">Übernehmen</button>
+<!-- </form>  -->
