--- a/club-manager/src/app/members/member-columns/member-columns.component.scss
+++ b/club-manager/src/app/members/member-columns/member-columns.component.scss
@@ -1,4 +1,19 @@
 .sidebar-base {
-  margin-top:50px;
-  background-color: rgb(25, 0, 255);
+  margin-top:5px;
+  margin-left: 10px;
+  font-size: 20px;
+  font-weight: bold;
+}
+
+.apply-button {
+  align-items: center;
+}
+
+.mat-list-option {
+  height: 30px !important;
+  line-height: 30px !important;
+  }
+
+.mat-pseudo-checkbox:after {
+    color: #b11f1f !important;
 }
