--- a/club-manager/src/app/members/member-table/member-table.component.scss
+++ b/club-manager/src/app/members/member-table/member-table.component.scss
@@ -3,7 +3,6 @@
 .table-container {
   max-width: 100%;
   height: $base-workspace;
-
 }
 
 .header-row {
@@ -15,11 +14,20 @@
 
 .table-row {
   min-height: 40px;
+  max-height: 40px !important;
   height: 40px;
 }
 
 .pag-base {
   position: fixed;
+}
+
+.bottom-row {
+  bottom: 0px;
+  min-height: 35px;
+  height: 35px;
+  font-family: 'Arial Black', Helvetica, sans-serif;
+  z-index: 50;
 }
 
 /* Animate items as they're being sorted. */
