--- a/club-manager/src/app/members/member-table/member-table.component.html
+++ b/club-manager/src/app/members/member-table/member-table.component.html
@@ -3,15 +3,15 @@
   </mat-paginator>
 </ng-container>
 
-<table  mat-table class="table-container" [dataSource]="members$" matSort (matSortChange)="sortData($event)"
+<table mat-table class="table-container" [dataSource]="members$" matSort (matSortChange)="sortData($event)"
   cdkDropList cdkDropListLockAxis="x" cdkDropListOrientation="horizontal" (cdkDropListDropped)="dropListDropped($event)">
 
-  <ng-container [matColumnDef]="column.field" *ngFor="let column of displayedColumns; let i = index" >
+  <ng-container [matColumnDef]="col.Name" *ngFor="let col of displayedColumns; let i = index" >
     <th mat-header-cell mat-sort-header *matHeaderCellDef
-        cdkDrag (cdkDragStarted)="dragStarted($event)" [cdkDragData]="{name: column.field}">
-        {{column.name}}
+        cdkDrag (cdkDragStarted)="dragStarted($event)" [cdkDragData]="{name: col.Name}">
+        {{col.Label}}
     </th>
-    <td mat-cell *matCellDef="let member">{{member[column.field]}}</td>
+    <td mat-cell [class]="col.Width" *matCellDef="let member">{{member[col.Name]}}</td>
   </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="displayedColumnNames; sticky:true" class="header-row"></tr>
