Spaltenauswahl mit Aktualisierung Mitgliederliste

--- a/club-manager/src/app/members/member-header/member-header.component.html
+++ b/club-manager/src/app/members/member-header/member-header.component.html
@@ -1,7 +1,7 @@
 
 <mat-toolbar color="accent">
   <span>Mitglieder</span>
-  <mat-icon class="add-icon">person_add_alt_1</mat-icon>
+  <mat-icon class="add-icon" (click)="headerNav('mem-create')">person_add_alt_1</mat-icon>
   <div class="search">
     <mat-icon class="search-icon">search</mat-icon>Filter:
     <mat-form-field class="search-input">
