--- a/club-manager/src/app/members/member-columns/member-columns.component.html
+++ b/club-manager/src/app/members/member-columns/member-columns.component.html
@@ -4,7 +4,7 @@
   <mat-selection-list color="primary" formControlName="selectedFields" >
     <mat-list-option  *ngFor="let col of fieldList"
         [selected]="col.Visible"
-        [value]="col.Label">
+        [value]="col.Column">
         {{col.Label}}
       </mat-list-option>
   </mat-selection-list>
